# pregex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: parser.cpp  pregex.cpp  pregex.h
testdata/: test.sh  testdata01.in  testdata01.out  testdata02.in  testdata02.out  testdata03.in  testdata03.out  testdata04.in  testdata04.out
